sjengida/g2/think
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:1906:10: error: conflicting types for 'think'
move_s * think( move_s *retstr) 
         ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/protos.h:63:8: note: previous declaration is here
move_s think (void);
       ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:2012:13: error: subscripted value is not an array, pointer, or vector
true_i_depth[0] = 0; 
~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:2229:40: error: too many arguments to function call, expected 3, have 4
search_root( &v70, v4 - v32, v4 + v32, i_depth); 
~~~~~~~~~~~                            ^~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:2240:39: error: too many arguments to function call, expected 3, have 4
search_root( &v70, -1000000, 1000000, i_depth); 
~~~~~~~~~~~                           ^~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:2262:39: error: too many arguments to function call, expected 3, have 4
search_root( &v70, -1000000, 1000000, i_depth); 
~~~~~~~~~~~                           ^~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:1099:1: note: 'search_root' declared here
move_s search_root (int originalalpha, int originalbeta, int depth) {
^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:2302:13: error: subscripted value is not an array, pointer, or vector
true_i_depth[0] = i_depth; 
~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:2380:26: error: too many arguments to function call, expected single argument 'compmove', have 2 arguments
proofnumbercheck( &move, v44); 
~~~~~~~~~~~~~~~~         ^~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/protos.h:125:1: note: 'proofnumbercheck' declared here
move_s proofnumbercheck(move_s compmove);
^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:2425:14: error: passing 'char [8]' to parameter of incompatible type 'move_s'
comp_to_san( output, v43); 
             ^~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/protos.h:119:26: note: passing argument to parameter 'move' here
void comp_to_san (move_s move, char str[]);
                         ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:2498:18: error: subscripted value is not an array, pointer, or vector
if ( true_i_depth[0] > 2 && pn_move.target == dummy.target && is_pondering == FALSE ) 
     ~~~~~~~~~~~~^~
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/search.c:2505:1: error: use of undeclared identifier 'MEMORY'
MEMORY[0] = 0; 
^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/think/src/obj/search.o] Error 1
